--- a/downloads.html
+++ b/downloads.html
@@ -37,15 +37,15 @@
 
   <script>
     async function loadFiles() {
-      const repo = "yn00b/yn00b.github.io"; // your repo
-      const path = "files"; // folder name
+      const repo = "yn00b/yn00b.github.io"; 
+      const path = "files"; 
 
       try {
         const res = await fetch(`https://api.github.com/repos/${repo}/contents/${path}`);
         const files = await res.json();
 
         let list = document.getElementById("file-list");
-        list.innerHTML = ""; // clear "Loading..."
+        list.innerHTML = ""; 
 
         files.forEach(file => {
           if (file.type === "file") {
